@@ -1,4 +1,4 @@
 DIST pacman-3.3.3.tar.gz 1246508 RMD160 7ae5700e12b5529dea2d394ff07f91af32107318 SHA1 9d81ca389f95dd5af53fbcbd2fd9f83ed2338451 SHA256 7641f392f80e69187b338d58ebab6351a89bb40d8ec9af51ddb24df3151d43f6
-EBUILD pacman-3.3.3.ebuild 1086 RMD160 2ba444324296bed14bd74e8de9afee4241f4a228 SHA1 a511fefcdafbe2107d80c250c888ce3aec6bbf99 SHA256 c8f9b627f2ae89221d8ed1f0a476bcd2db8ce21c40ef66d6631d8bc0ece4f7fe
-MISC ChangeLog 292 RMD160 6823ff98b50b858aef25316f15ddb59a35f5d99e SHA1 2f7001b2ec4248ef0192fe5b82cc38ab2c08ea24 SHA256 22445a902a61626ea7dc16cc45389555ee23861a045b8d1f4baf81795f0d7dd8
+EBUILD pacman-3.3.3.ebuild 1346 RMD160 c9d16defde0eabe990b36577976301a81aa6554b SHA1 8b9503b8c5f578899959b2ea125494fd33f96639 SHA256 2cfc783e00174f7c51d7fab8e24646852c65caf35c450abc1b94e63657ab2c44
+MISC ChangeLog 501 RMD160 a3f8e7cd70ab9f06eef636efd97d0c44ba5d460b SHA1 df07fea76a3f9a05c0360780eb76530dc4de3065 SHA256 191eec5cf5a0e1aec2129be3567f1efb39d43eb24f19807a431270e2c7e25750
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
