@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> pacman-3.3.3.ebuild:
+  Add missing runtime dep on xz-utils. Fix ./configure flags. Refer people to
+  my arch chroot guide ;-).
+
   04 Jan 2010; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> +pacman-3.3.3.ebuild, +metadata.xml:
   New ebuild for bug 299275 thanks to tommy and ken69267
